## CHANGELOG

- __2011/09/11__: 0.9.0 release.
    - Bumping up version to 0.9.0, as natto appears to be stable.
    - Also migrated project to github.

- __2011/03/23__: 0.5.1 release.
    - Corrected mojibake issue for surface and feature values 
      when node-parsing.
    - Corrected call to NBest initializer in lambdas 
      for Natto::MeCab#initialize.

- __2011/02/26__: 0.5.0 release.
    - Added support for node parsing using blocks
    - Added support for mecab options nbest, all-morphs
    - Pulling support for mecab option partial, since it is more of a command-line feature

- __2011/01/27__: 0.4.1 release.
    - Tweaking the description in natto.gemspec a bit 

- __2011/01/26__: 0.4.0 release.
    - Added support for mecab option input-buffer-size 
    - Adding CHANGELOG file 
    - Continuing update of documentation

- __2011/01/22__: 0.3.0 release.
    - Refactoring of Natto::Binding to make mecab methods available as class methods
    - Refactoring of Natto::DictionaryInfo to override to_s method to return filename
    - Refactoring of Natto::MeCab to use class methods in Natto::Binding
    - Refactoring and logical separation of test cases
    - Continuing update of documentation

- __2011/01/19__: 0.2.0 release.
    - Added support for mecab option allocate-sentence 
    - Continuing update of documentation

- __2011/01/15__: 0.1.1 release.
    - Refactored Natto::DictionaryInfo#method_missing
    - Continuing update of documentation

- __2011/01/15__: 0.1.0 release.
    - Added accessors to Natto::DictionaryInfo
    - Added accessor for version in Natto::MeCab
    - Continuing update of documentation

- __2011/01/13__: 0.0.9 release.
    - Further development and testing for mecab dictionary access/destruction
    - Continuing update of documentation

- __2011/01/07__: 0.0.8 release.
    - Adding support for accessing dictionaries 
    - Further tweaking of documentation with markdown

- __2010/12/30__: 0.0.7 release.